fix: render html and flicker issue

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,6 +1,8 @@
 @import 'shared';
 
 .Landing {
+  opacity: 0;
+
   > .greeting {
     max-width: 144rem;
     margin: 0 auto;
